# ROS---Turtle-Track

./: README.md
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/axis_camera/: .catkin  .rosinstall  setup.sh
devel/.private/be_robot/: .catkin  .rosinstall  setup.sh
devel/.private/beginner_tutorials/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/demo_teleop/: .catkin  .rosinstall  setup.sh
devel/.private/gngt_demo/: .catkin  .rosinstall  setup.sh
devel/.private/robotique_autonome_be/: .catkin  .rosinstall  setup.sh
devel/.private/test_opencv/: .catkin  .rosinstall  setup.sh
devel/.private/transform_pose/: .catkin  .rosinstall  setup.sh
devel/.private/turtle_bot/: .catkin  .rosinstall  setup.sh
devel/.private/turtlebot_teleop/: .catkin  .rosinstall  setup.sh
devel/.private/vrep_ros_interface/: .catkin  .rosinstall  setup.sh
devel/include/axis_camera/: Axis.h  PTZConfig.h
devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/demo_teleop/: SafeDroneTeleopConfig.h
devel/include/transform_pose/: pose.h  poseRequest.h  poseResponse.h
devel/include/turtle_bot/: Abort.h  AbortRequest.h  AbortResponse.h  ArenaPosition.h  ArenaPositions.h  Axis.h  Entities.h  Entity.h  Go.h  GoRequest.h  GoResponse.h  Mode.h  ModeRequest.h  ModeResponse.h  PanTilt.h  PanTilts.h  Record.h  RecordRequest.h  RecordResponse.h  Service1.h  Service1Request.h  Service1Response.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
devel/lib/gngt_demo/: gngt  input
devel/lib/pkgconfig/: axis_camera.pc  be_robot.pc  beginner_tutorials.pc  catkin_tools_prebuild.pc  demo_teleop.pc  gngt_demo.pc  robotique_autonome_be.pc  test_opencv.pc  transform_pose.pc  turtle_bot.pc  turtlebot_teleop.pc  vrep_ros_interface.pc
devel/lib/test_opencv/: test_opencv
devel/lib/transform_pose/: transform_pose_node
devel/lib/turtle_bot/: detect  gngt  localize  move_axis  nav_points  nav_points_bot  nav_points_sim  nav_to_goal  position_server  positions  sampler  share  tracker
devel/lib/turtlebot_teleop/: turtlebot_teleop_joy
logs/gngt_demo/: build.cmake.001.log.stderr
logs/robotique_autonome_be/: build.check.031.log.stderr
logs/transform_pose/: build.make.000.log.stderr  build.make.001.log.stderr
logs/turtle_bot/: build.check.025.log.stderr  build.check.034.log.stderr  build.check.036.log.stderr  build.check.042.log.stderr  build.check.054.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.symlink.001.log.stderr
logs/turtlebot_teleop/: build.check.026.log.stderr
logs/vrep_ros_interface/: build.cmake.000.log.stderr
src/: LIBSVM-ROS-README
src/be_robot/: CMakeLists.txt  package.xml
src/be_robot/launch/: cartographie.launch  cartographie.launch~
src/be_robot/src/: pioneer_driver.py  pioneer_driver.py~
src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/gngt-demo/: CMakeLists.txt
src/gngt-demo/launch/: gngt_demo.launch
src/gngt-demo/src/: gngt.cpp  input.cpp~
src/robotique_autonome_be/: CMakeLists.txt  README.md  map.ppm  next_goal_map.ppm  package.xml  rviz.config.base.rviz  rviz.config.rviz
src/robotique_autonome_be/launch/: gmapping.launch  joy_pioneer.launch  move_base.launch
src/robotique_autonome_be/nodes/: joy_to_twist.py  pioneer_explorer.py  pioneer_explorer_base.py  pioneer_odom.py
src/robotique_autonome_be/share/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/test-opencv/: CMakeLists.txt  package.xml
src/test-opencv/src/: test-opencv.cpp
src/transform_pose/launch/: #turtle_nav.launch#
src/turtle_bot/: CMakeLists.txt  CMakeLists.txt~  choses_a_faire.txt  choses_a_faire.txt~  package.xml  package.xml~
src/turtle_bot/launch/: all.launch  all.launch~  detect.launch  detect.launch~  gngt.launch  gngt.launch~  localize.launch  localize.launch~  positions.launch  share.launch  share.launch~  tracker.launch  tracker.launch~  turtle_nav.launch~  turtlebot_nav.launch  turtlebot_nav.launch~  turtlesim_nav.launch  turtlesim_nav.launch~
src/turtle_bot/msg/: ArenaPositions.msg  ArenaPositions.msg~  Entities.msg  Entity.msg  Entity.msg~  PanTilt.msg~  PanTilts.msg  PanTilts.msg~
src/turtle_bot/rviz_conf/: rviz_conf.rviz  rviz_conf.rviz~
src/turtle_bot/src/: #tracker.cpp#~  detect.cpp  detect.cpp~  gngt.cpp  kalman.cpp  localize.cpp  localize.cpp~  move_axis.cpp~  nav_points.cpp  nav_points.cpp~  nav_points_bot.cpp  nav_points_bot.cpp~  nav_points_sim.cpp  nav_to_goal.cpp  nav_to_goal.cpp~  points_and_lines.cpp  points_and_lines.cpp~  poses.txt~  position-client-example.cpp  position_server.cpp  positions.cpp  sampler.cpp  share.cpp  tracker.cpp  tracker.cpp~
src/turtle_bot/src/server/: position-server.cpp  script_server.sh
src/turtle_bot/src/txt/: base_de_donnees.txt  base_de_donnees_old.txt  fX.pred  fY.pred  fY_old.pred  out.txt~  poses (copie).txt~  poses.txt  poses.txt~  test.py
src/turtle_bot/srv/: Abort.srv  Abort.srv~  Go.srv~  Mode.srv  Service1.srv
src/turtle_bot/svm/: example-001-basics.cpp~
src/turtle_bot/svm/gaml-libsvm/: #LICENSE#
src/turtle_bot/svm/gaml-libsvm/examples/: svm.cpp  svm.cpp~
(+322 files in other folders)
