cmake_minimum_required(VERSION 2.8.3)
project(turtle_bot)

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++17)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  std_srvs
  geometry_msgs
  tf
  message_generation
  image_transport
  cv_bridge
  pcl_conversions 
  pcl_ros
  )

#added after ROS update to link OpenCV
find_package(OpenCV 3.3.1 EXACT REQUIRED)

find_package(PkgConfig)
pkg_check_modules(GAMLLIBSVM gaml-libsvm REQUIRED)

pkg_check_modules(VQ2 vq2 REQUIRED)


## System dependencies are found with CMake's conventions
# find_package(Boost REQUIRED COMPONENTS system)


## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
# catkin_python_setup()

################################################
## Declare ROS messages, services and actions ##
################################################

## To declare and build messages, services or actions from within this
## package, follow these steps:
## * Let MSG_DEP_SET be the set of packages whose message types you use in
##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
## * In the file package.xml:
##   * add a build_depend tag for "message_generation"
##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
##     but can be declared for certainty nonetheless:
##     * add a run_depend tag for "message_runtime"
## * In this file (CMakeLists.txt):
##   * add "message_generation" and every package in MSG_DEP_SET to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * add "message_runtime" and every package in MSG_DEP_SET to
##     catkin_package(CATKIN_DEPENDS ...)
##   * uncomment the add_*_files sections below as needed
##     and list every .msg/.srv/.action file to be processed
##   * uncomment the generate_messages entry below
##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)

## Generate messages in the 'msg' folder
 add_message_files(
   FILES
   ArenaPosition.msg
   ArenaPositions.msg
   PanTilt.msg
   PanTilts.msg
   Axis.msg
   Entity.msg
   Entities.msg
 )

## Generate services in the 'srv' folder
add_service_files(
   FILES
   Service1.srv
   Go.srv
   Abort.srv
   Mode.srv
   Record.srv
   )

## Generate actions in the 'action' folder
# add_action_files(
#   FILES
#   Action1.action
#   Action2.action
# )

## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
   std_msgs
   geometry_msgs
   std_srvs
   turtle_bot
 )

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

## To declare and build dynamic reconfigure parameters within this
## package, follow these steps:
## * In the file package.xml:
##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
## * In this file (CMakeLists.txt):
##   * add "dynamic_reconfigure" to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * uncomment the "generate_dynamic_reconfigure_options" section below
##     and list every .cfg file to be processed

## Generate dynamic reconfigure parameters in the 'cfg' folder
# generate_dynamic_reconfigure_options(
#   cfg/DynReconf1.cfg
#   cfg/DynReconf2.cfg
# )

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if your package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES turtle_bot
  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime image_transport cv_bridge
#  DEPENDS system_lib
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
# include
${catkin_INCLUDE_DIRS}
${OpenCV_INCLUDE_DIRS}
${gaml_INCLUDE_DIRS}
)

## Declare a C++ library
# add_library(${PROJECT_NAME}
#   src/${PROJECT_NAME}/turtle_bot.cpp
# )

## Add cmake target dependencies of the library
## as an example, code may need to be generated before libraries
## either from message generation or dynamic reconfigure
# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Declare a C++ executable
## With catkin_make all packages are built within a single CMake context
## The recommended prefix ensures that target names across packages don't collide
add_executable(nav_to_goal src/nav_to_goal.cpp)
add_executable(nav_points_sim src/nav_points_sim.cpp)
add_executable(nav_points_bot src/nav_points_bot.cpp)
add_executable(move_axis src/move_axis.cpp)
add_executable(detect src/detect.cpp)
add_executable(tracker src/tracker.cpp)
add_executable(sampler src/sampler.cpp)
add_executable(localize src/localize.cpp)
add_executable(position_server src/position_server.cpp)
add_executable(share src/share.cpp)
add_executable(positions src/positions.cpp)
add_executable(gngt src/gngt.cpp)

## Rename C++ executable without prefix
## The above recommended prefix causes long target names, the following renames the
## target back to the shorter version for ease of user use
## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")

## Add cmake target dependencies of the executable
## same as for the library above
# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Specify libraries to link a library or executable target against
target_link_libraries(nav_to_goal
  ${catkin_LIBRARIES}
  )

target_link_libraries(nav_points_sim
  ${catkin_LIBRARIES}
  )

target_link_libraries(nav_points_bot
  ${catkin_LIBRARIES}
  ${OpenCV_LIBRARIES} 
  )

target_link_libraries(move_axis
  ${catkin_LIBRARIES}
  )

target_link_libraries(detect
  ${catkin_LIBRARIES}
  ${OpenCV_LIBRARIES}
  )

target_link_libraries(tracker
  ${catkin_LIBRARIES}
  )

target_link_libraries(position_server
  ${catkin_LIBRARIES}
  )

target_link_libraries(sampler
  ${catkin_LIBRARIES}
  )

target_compile_options(localize PUBLIC ${GAMLLIBSVM_CFLAGS_OTHER})
target_include_directories(localize PUBLIC ${GAMLLIBSVM_INCLUDE_DIRS})
target_link_libraries(localize
  ${catkin_LIBRARIES} ${GAMLLIBSVM_LIBRARIES}
  )

target_link_libraries(share
  ${catkin_LIBRARIES}
  )

target_link_libraries(positions
  ${catkin_LIBRARIES}
  )


target_link_libraries(gngt ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
set_property         (TARGET gngt APPEND PROPERTY INCLUDE_DIRECTORIES ${VQ2_INCLUDE_DIRS}   )
set_property         (TARGET gngt APPEND PROPERTY COMPILE_FLAGS       ${VQ2_CFLAGS_OTHER}   )
set_property         (TARGET gngt APPEND PROPERTY INCLUDE_DIRECTORIES ${catkin_INCLUDE_DIRS})
set_property         (TARGET gngt APPEND PROPERTY LINK_LIBRARIES      ${VQ2_LIBRARIES}      )
add_dependencies     (gngt turtle_bot_generate_messages_cpp)

  
#############
## Install ##
#############

# all install targets should use catkin DESTINATION variables
# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html

## Mark executable scripts (Python etc.) for installation
## in contrast to setup.py, you can choose the destination
# install(PROGRAMS
#   scripts/my_python_script
#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark executables and/or libraries for installation
# install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark cpp header files for installation
# install(DIRECTORY include/${PROJECT_NAME}/
#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
#   FILES_MATCHING PATTERN "*.h"
#   PATTERN ".svn" EXCLUDE
# )

## Mark other files for installation (e.g. launch and bag files, etc.)
# install(FILES
#   # myfile1
#   # myfile2
#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
# )

#############
## Testing ##
#############

## Add gtest based cpp test target and link libraries
# catkin_add_gtest(${PROJECT_NAME}-test test/test_turtle_bot.cpp)
# if(TARGET ${PROJECT_NAME}-test)
#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
# endif()

## Add folders to be run by python nosetests
# catkin_add_nosetests(test)
